# ppforest2

./: .clang-tidy  .clangd  .gitignore  CHANGELOG.md  Makefile  README.md
.github/workflows/: deploy-docs.yml  release.yml  run-analyze.yml  run-benchmark.yml  run-coverage.yml  run-cpp-warnings.yml  run-format.yml  run-golden-regen.yml  run-r-check.yml  run-r-sanitizers.yml  run-r-test.yml  run-spell-check.yml  run-test-debug.yml  run-test.yml  run-win-builder.yml
bindings/R/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  cleanup  configure  configure.win  cran-comments.md
core/: CMakeLists.txt  Dependencies.cmake
core/cmake/: EmbedResource.cmake
core/include/: ppforest2.hpp
core/src/: extending-strategies.dox  extending-visitors.dox  mainpage.dox
core/src/cli/: Benchmark.cpp  Benchmark.hpp  Benchmark.integration.test.cpp  BenchmarkReport.cpp  BenchmarkReport.hpp  BenchmarkReport.test.cpp  CLI.cpp  CLI.integration.test.cpp  CLIOptions.cpp  CLIOptions.hpp  CLIOptions.test.cpp  CMakeLists.txt  Evaluate.cpp  Evaluate.integration.test.cpp  EvaluateParams.cpp  EvaluateParams.hpp  EvaluateParams.test.cpp  ModelParams.cpp  ModelParams.hpp  ModelParams.test.cpp  Predict.cpp  Predict.hpp  Predict.integration.test.cpp  Reproducibility.integration.test.cpp  Serve.cpp  Serve.hpp  Serve.integration.test.cpp  ServeHandlers.cpp  ServeHandlers.hpp  ServeHandlers.test.cpp  ServeParams.hpp  Summarize.cpp  Summarize.integration.test.cpp  Train.cpp  Train.hpp  Train.integration.test.cpp  Validation.cpp  Validation.test.cpp
core/src/cli/resources/: app.css  predict.html  summary.html  summary.js
fixtures/: model.json
golden/crab/: forest-pda-n10-s0.json  tree-pda-s0.json
golden/glass/: forest-pda-n10-s0.json
golden/iris/: forest-pda-l05-n5-s0.json  forest-pda-n5-s0.json  tree-pda-s0.json
golden/wine/: forest-pda-n10-s0.json
main/: index.html
main/cpp/: All_8hpp.html  All_8hpp_source.html  Bagged_8hpp.html  Bagged_8hpp_source.html  BenchmarkParams_8hpp.html  BenchmarkParams_8hpp_source.html  BenchmarkReport_8hpp.html  BenchmarkReport_8hpp_source.html  Benchmark_8hpp.html  Benchmark_8hpp_source.html  Binarization_8hpp.html  Binarization_8hpp_source.html  ByCutpoint_8hpp.html  ByCutpoint_8hpp_source.html  ByLabel_8hpp.html  ByLabel_8hpp_source.html  CLIOptions_8hpp.html  CLIOptions_8hpp_source.html  CLI_8integration_8hpp.html  CLI_8integration_8hpp.js  CLI_8integration_8hpp_source.html  ClassificationForest_8hpp.html  ClassificationForest_8hpp_source.html  ClassificationTree_8hpp.html  ClassificationTree_8hpp_source.html  Color_8hpp.html  Color_8hpp.js  Color_8hpp_source.html  CompositeStop_8hpp.html  CompositeStop_8hpp_source.html  ConfusionMatrix_8hpp.html  ConfusionMatrix_8hpp_source.html  Cutpoint_8hpp.html  Cutpoint_8hpp.js  Cutpoint_8hpp_source.html  (+622 more)
scripts/: vendor-guard-json.sh
(+1483 files in other folders)
